# django-oauth

./: .dockerignore  .env.docker  .env.example  .env.local  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: forms.py  mail.py  models.py  rabbit.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_email.py  0003_user_is_verified.py  0004_user_bio_user_nickname_userlinks.py  0005_alter_userlinks_user.py
accounts/templates/accounts/: my-profile.html  signin.html  signout.html  signup.html  verify.html
bulma/: .gitignore  bulma-custom.scss  package-lock.json  package.json
django_oauth/: settings.py  urls.py  utils.py
nginx/conf.d/: default.conf
oauth/: forms.py  models.py  serializer.py  urls.py  views.py
oauth/migrations/: 0001_initial.py  0002_alter_oauthclient_options_alter_oauthclient_status.py  0003_oauthclient_test_users.py  0004_alter_callbackurl_client.py  0005_alter_callbackurl_url.py  0006_oauthclient_users_alter_callbackurl_url_and_more.py  0007_oauthclient_desc_alter_oauthclient_owner.py  0008_oauthclient_entrypoint.py  0009_alter_oauthclient_status.py  0010_oauthclient_logo.py
oauth/templates/oauth/: activate.html  authorize.html  create.html  deactivate.html  delete.html  index.html  (+1 more)
oauth/urls/: __init__.py  authorize.py  client.py
oauth/views/: authorize.py  client.py
oauth_admin/: apps.py  forms.py  models.py  urls.py  views.py
oauth_admin/migrations/: 0001_initial.py
static/: .gitignore
templates/: 400.html  403.html  404.html  base.html
(+2 files in other folders)
