[project]
name = "django-oauth"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "asgiref==3.8.1",
    "async-timeout==5.0.1",
    "django==4.2.20",
    "djangorestframework==3.16.0",
    "hashids==1.3.1",
    "hiredis==3.1.0",
    "pika==1.3.2",
    "pillow==11.2.1",
    "psycopg==3.2.6",
    "psycopg-binary==3.2.6",
    "pyjwt==2.10.1",
    "redis==6.0.0",
    "sqlparse==0.5.3",
    "typing-extensions==4.13.2",
]
