[project]
name = "django-oauth"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-rest-framework>=0.1.0",
    "hashids>=1.3.1",
    "hiredis>=3.4.0",
    "pika>=1.4.1",
    "pillow>=12.2.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "sqlparse>=0.5.5",
    "typing-extensions>=4.15.0",
]
